k_tests/mariadb-adminer-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mariadb-adminer-pod
spec:
  containers:
  - name: mariadb-container
    image: mariadb:latest
    ports:
    - containerPort: 3306
  - name: adminer-container
    image: adminer:latest
    ports:
    - containerPort: 8080
