k_tests/nginx_pod_def.yml
---
apiVersion: v1

kind: Pod

metadata: 
  name: webserver

spec:
  containers:
    - name: webserver1
      image: nginx:latest
      ports:
        - containerPort: 80
    - name: webserver2
      image: nginx:latest
      ports:
        - containerPort: 81
