k_tests/postgres-pgadmin-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pgadmin-pod
  namespace: db1
spec:
  containers:
    - name: postgres
      image: postgres:latest
      ports:
        - containerPort: 5432
          name: postgres
    - name: pgadmin
      image: dpage/pgadmin4:latest
      ports:
        - containerPort: 80
          name: pgadmin
