k_tests/adminer-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
spec:
  selector:
    app: adminer-container
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
  externalIPs:
    - 192.168.65.17
