k_tests/deployment_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mg0050-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: tcp
  selector:
    app: simple-rest-golang
