k_tests/pgadmin_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: db1
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
